# operations

./: .env.secret  .env.template  .gitignore  .terraform.lock.hcl  README.md  docker-compose.yml  main.tf  pyproject.toml
.github/workflows/: docker-build.yml
.gitsecret/keys/: pubring.kbx  pubring.kbx~  trustdb.gpg
.gitsecret/paths/: mapping.cfg
docs/: ANSWERS.md  INSTALL.md  TECH_STACK.md
rates/: .dockerignore  Dockerfile  pyproject.toml  rates.py  wsgi.py
rates/src/rates/: config.py  rates.py
scripts/: deploy  run_cloud  run_local
traefik/: dynamic.yml  traefik.yml
