[tool.poetry]
name = "rates"
version = "0.1.0"
description = ""
authors = ["lainiwa <kirrik96@gmail.com>"]
# readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.5"
flask = "^2.2.2"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
